--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ services:
   - docker
 script:
   - docker build -t test .
-  - docker run -e TRELLO_KEY='093a2e2d292bc9ccb963209e2cf8f9a8'  -e TRELLO_TOKEN='a880b188a7e74c2c000d76960aeb2c23e2723ed08fe2000ed03d81acbb433cf4' -e TRELLO_BOARD='60eacfe12a6b3c534957c408'  -e SECRET_KEY='secret-key' -e FLASK_APP='todo_app/app' -e FLASK_ENV='development' -e FLASK_SKIP_DOTENV='True' test
+  - docker run -e TRELLO_KEY  -e TRELLO_TOKEN -e TRELLO_BOARD -e SECRET_KEY -e FLASK_APP='todo_app/app' -e FLASK_ENV='development' -e FLASK_SKIP_DOTENV='True' test
