--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ script:
   - docker run -e TRELLO_KEY  -e TRELLO_TOKEN -e TRELLO_BOARD -e SECRET_KEY -e FLASK_APP='todo_app/app' -e FLASK_ENV='development' -e FLASK_SKIP_DOTENV='True' test
  
 after-script:
-  - docker build --target prod -t $DOCKER_USERNAME/todo-app:latest -t registry.heroku.com/todo-app-m8/web .
+  - docker build --target prod -t $DOCKER_USERNAME/todo-app:latest .
   - docker push $DOCKER_USERNAME/todo-app:latest
