--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 before-install:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - wget -qO- https://toolbelt.heroku.com/install.sh | sh #installed heroku CLI
-  - docker login -u "$HEROKU_USERNAME" --password=$HEROKU_PASS registry.heroku.com #logged in
+  - docker login --username=$HEROKU_USERNAME --password=$HEROKU_PASS registry.heroku.com #logged in
   
 script:
   - docker build --target test -t test .
@@ -14,10 +14,12 @@ script:
 after-script:
   - docker build --target prod -t $DOCKER_USERNAME/todo-app:latest .
   - docker push $DOCKER_USERNAME/todo-app:latest
-  - docker tag  $DOCKER_USERNAME/todo-app:latest registry.heroku.com/todo-app-m8/web
-  - docker push registry.heroku.com/todo-app-m8/web
+  
 deploy:
     provider: script
-    on: module_8
+    on:
+        branch: module_8
     script: 
+            docker tag  $DOCKER_USERNAME/todo-app:latest registry.heroku.com/todo-app-m8/web
+            docker push registry.heroku.com/todo-app-m8/web
             heroku container:release web --app todo-app-m8
