--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 before-install:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - wget -qO- https://toolbelt.heroku.com/install.sh | sh #installed heroku CLI
-  - docker login --username=$HEROKU_USERNAME --password=$HEROKU_PASS registry.heroku.com #logged in
+  - docker login --username=$HEROKU_USERNAME --password=$HEROKU_API_KEY registry.heroku.com #logged in
   
 script:
   - docker build --target test -t test .
@@ -13,6 +13,7 @@ script:
  
 after-script:
   - docker build --target prod -t $DOCKER_USERNAME/todo-app:latest .
+  - docker tag $DOCKER_USERNAME/todo-app:latest registry.heroku.com/todo-app-m8/web
   - docker push $DOCKER_USERNAME/todo-app:latest
   
 deploy:
@@ -20,6 +21,5 @@ deploy:
     on:
         branch: module_8
     script: 
-            docker tag  $DOCKER_USERNAME/todo-app:latest registry.heroku.com/todo-app-m8/web
             docker push registry.heroku.com/todo-app-m8/web
             heroku container:release web --app todo-app-m8
