--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ deploy:
     on:
         branch: module_8
     script: 
-            docker push registry.heroku.com/todo-app-m8/web
-            heroku container:release web --app todo-app-m8
+        docker push registry.heroku.com/todo-app-m8/web;
+        heroku container:release web --app todo-app-m8;
