--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,24 @@ os:
   - linux
 services:
   - docker
+before-install:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - wget -qO- https://cli-assets.heroku.com/install.sh | sh #installed heroku CLI
+  - docker login --username=$HEROKU_USERNAME --password=$HEROKU_API_KEY registry.heroku.com #logged in
+  
 script:
-  - docker build -t test .
+  - docker build --target test -t test .
   - docker run -e TRELLO_KEY  -e TRELLO_TOKEN -e TRELLO_BOARD -e SECRET_KEY -e FLASK_APP='todo_app/app' -e FLASK_ENV='development' -e FLASK_SKIP_DOTENV='True' test
+ 
+after_success:
+  - docker build --target prod -t $DOCKER_USERNAME/todo-app:latest .
+  - docker tag $DOCKER_USERNAME/todo-app:latest registry.heroku.com/todo-app-m8/web
+  - docker push $DOCKER_USERNAME/todo-app:latest
+  
+deploy:
+    provider: script
+    on:
+        branch: main
+    script: 
+        docker push registry.heroku.com/todo-app-m8/web;
+        heroku container:release web --app todo-app-m8;
