--- a/.env.test
+++ b/.env.test
@@ -6,4 +6,9 @@ FLASK_SKIP_DOTENV=True
 SECRET_KEY=secret-key
 TRELLO_KEY=key
 TRELLO_TOKEN=TRELLO_TOKEN
-TRELLO_BOARD=board_id
+TRELLO_BOARD=test_board2
+
+MONGO_USERNAME=jorbefer
+MONGO_PASS=R07IFduVgPYjyBHn
+MONGO_HOST=cluster0.lt8xw.mongodb.net
+DEFAULT_DATABASE=db
