--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,13 @@ SECRET_KEY=secret-key
 TRELLO_KEY=*************
 TRELLO_TOKEN=**********
 TRELLO_BOARD=47ebaa0e00564b548464a9d5fb7c796f
+
+SECRET_KEY=
+TRELLO_KEY=
+TRELLO_TOKEN=
+TRELLO_BOARD=
+
+MONGO_USERNAME=
+MONGO_PASS=
+MONGO_HOST=
+DEFAULT_DATABASE=
