--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytest = "^6.2.4"
 requests = "^2.25.1"
 selenium = "^3.141.0"
 pymongo = {extras = ["srv"], version = "^3.12.0"}
+mongomock = "^3.23.0"
 
 [tool.poetry.dev-dependencies]
 
