--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python-dotenv = "^0.14.0"
 pytest = "^6.2.4"
 requests = "^2.25.1"
 selenium = "^3.141.0"
+pymongo = {extras = ["srv"], version = "^3.12.0"}
+mongomock = "^3.23.0"
 
 [tool.poetry.dev-dependencies]
 
