--- a/.env.template
+++ b/.env.template
@@ -17,3 +17,7 @@ MONGO_USERNAME=
 MONGO_PASS=
 MONGO_HOST=
 DEFAULT_DATABASE=
+
+GITHUB_CLIENTID=
+GITHUB_CLIENTSECRET=
+OAUTHLIB_INSECURE_TRANSPORT=true
