--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ requests = "^2.25.1"
 selenium = "^3.141.0"
 pymongo = {extras = ["srv"], version = "^3.12.0"}
 mongomock = "^3.23.0"
+oauthlib = "^3.1.1"
+Flask-Login = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 
