TEST WITH hooks

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ after_success:
   - docker build --target prod -t $DOCKER_USERNAME/todo-app:latest .
   - docker tag $DOCKER_USERNAME/todo-app:latest registry.heroku.com/todo-app-m8/web
   - docker push $DOCKER_USERNAME/todo-app:latest
+  - curl -dH -X POST "https://\$capita2-jorgeferrer-webapp:f7zzpw4hFAtWsnwzvitdYdcesWLD0JMNQZSZYPrlk19qSxRLHj7GRv6ivPHq@capita2-jorgeferrer-webapp.scm.azurewebsites.net/docker/hook"
   
 deploy:
     provider: script
