--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pymongo = {extras = ["srv"], version = "^3.12.0"}
 mongomock = "^3.23.0"
 oauthlib = "^3.1.1"
 Flask-Login = "^0.5.0"
+MarkupSafe = "=2.0.1"
 
 [tool.poetry.dev-dependencies]
 
