added deploy again.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,10 @@ after_success:
 before_deploy:
   - terraform init
   - terraform apply -var="APP-PREFIX=$PRODUCTION_ENV_PREFIX" -var="CLIENTID=$CLIENT_ID" -var="CLIENTSECRET=$CLIENTSECRET"  -auto-approve
-  - curl -dH -X POST "$(terraform output -raw cd_webhook)"
   
+deploy:
+    provider: script
+    on:
+        all_branches: true
+    script:
+        curl -dH -X POST "$(terraform output -raw cd_webhook)"
