--- a/.env.test
+++ b/.env.test
@@ -1,13 +1,6 @@
 # Flask server configuration.
 FLASK_APP=todo_app/app
 FLASK_ENV=development
-
+FLASK_SKIP_DOTENV=True
 # Change the following values for local development.
-MONGO_CONNECTION_STRING=
-TRELLO_BOARD=
-SECRET_KEY=
-
-
-GITHUB_CLIENTID=
-GITHUB_CLIENTSECRET=
-OAUTHLIB_INSECURE_TRANSPORT=true
+SECRET_KEY=dummy
