--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,15 @@ before-install:
   
 script:
   - docker build --target test -t test .
-  - docker run -e TRELLO_KEY  -e TRELLO_TOKEN -e TRELLO_BOARD -e SECRET_KEY -e FLASK_APP='todo_app/app' -e FLASK_ENV='development' -e FLASK_SKIP_DOTENV='True' -e MONGO_USERNAME -e MONGO_PASS  -e MONGO_HOST -e DEFAULT_DATABASE -e LOGIN_DISABLED="True" test
+  - docker run -e TRELLO_BOARD -e SECRET_KEY -e FLASK_APP='todo_app/app' -e FLASK_ENV='development' -e FLASK_SKIP_DOTENV='True' -e MONGO_CONNECTION_STRING -e LOGIN_DISABLED="True" test
  
 after_success:
   - docker build --target prod -t $DOCKER_USERNAME/todo-app:latest .
-  - docker tag $DOCKER_USERNAME/todo-app:latest registry.heroku.com/todo-app-m8/web
   - docker push $DOCKER_USERNAME/todo-app:latest
   
 deploy:
     provider: script
     on:
         all_branches: true
-    script: 
-        docker push registry.heroku.com/todo-app-m8/web;
-        heroku container:release web --app todo-app-m8;
+    script:
+        curl -dH -X POST "$WEBHOOK_URL"
