--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,4 @@ FLASK_ENV=development
 FLASK_SKIP_DOTENV=True
 # Change the following values for local development.
 SECRET_KEY=dummy
+LOG_LEVEL=DEBUG
