--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 
 script:
   - docker build --target test -t test .
-  - docker run -e TRELLO_BOARD -e SECRET_KEY -e FLASK_APP='todo_app/app' -e FLASK_ENV='development' -e FLASK_SKIP_DOTENV='True' -e MONGO_CONNECTION_STRING -e LOGIN_DISABLED="True" test
+  - docker run -e TRELLO_BOARD -e SECRET_KEY -e FLASK_APP='todo_app/app' -e FLASK_ENV='development' -e FLASK_SKIP_DOTENV='True' -e MONGO_CONNECTION_STRING -e LOGIN_DISABLED="True" -e LOG_LEVEL="DEBUG" test
  
 after_success:
   - docker build --target prod -t $DOCKER_USERNAME/todo-app:latest .
