--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ mongomock = "^3.23.0"
 oauthlib = "^3.1.1"
 Flask-Login = "^0.5.0"
 MarkupSafe = "=2.0.1"
+loggly-python-handler = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 
